--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -6,19 +6,21 @@ html {
 }
 
 body {
-  background-color: #030027;
+  background-image: url('../images/earth.jpg');
+  background-position: center-top;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 0;
   padding: 0;
   font-family: 'Microsoft Yi Baiti', sans-serif;
   font-size: 15px;
   line-height: 1.5;
   color: white;
-  position: relative;
 }
 
 .input{ 
 	text-align: center; 
-	margin: 370px; 
+	margin: 350px; 
 }
 
 input[type="text"]{
@@ -45,15 +47,25 @@ input[type="submit"]{
 }
 
 .display {
+	position: absolute; 
+	top: 460px;
+	right: 550px;
 	text-align: center;
-	font-size: 35px;
+	font-size: 40px;
 	font-weight: bold;
+	margin-top: 35px;
+	color: white;
+	width: 300px;
+    height: 250px;
+    border: 5px solid white;
+	border-radius: 2px;
+	background-color: none;
 }
 
 
 h1{
 	width:100%; 
-	margin-top: 280px;
+	margin-top: 260px;
 	position: absolute;
 	font-size: 2vw;
 	color: white; 
@@ -87,7 +99,7 @@ text-decoration: underline;
 	font-size: 100px; 
 	color: white; 
 	text-align: center;
-	margin-top: 50px;
+	margin-top: 30px;
 	font-family:'OCR A', sans-serif;
 		
 }
