--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,106 +1,23 @@
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 body {
-  background-image: url('../images/earth.jpg');
-  background-position: center-top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-  font-family: 'Microsoft Yi Baiti', sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
+  background-image: url('../images/earth.jpg'); 
+  background-attachment: fixed;
+  background-position: center;
   color: white;
 }
 
-.input{ 
-	text-align: center; 
-	margin: 350px; 
-}
-
-input[type="text"]{
-	height: 50px; 
-	width:500px; 
-	background-color: white;
-	border: none; 
-	border-radius: 2px;
-	color: black;
-	font-size: 15px;
-	padding: 10px 20px;
-}
-
-input[type="submit"]{
-	height: 50px; 
-	width:100px; 
-	background-color: white;
-	border: none; 
-	border-radius: 2px;
-	color: black;
-	font-weight: bold;
-	font-size: 15px;
-	padding: 10px 20px;
-}
-
-.display {
-	position: absolute; 
-	top: 460px;
-	right: 550px;
-	text-align: center;
-	font-size: 40px;
-	font-weight: bold;
-	margin-top: 35px;
-	color: white;
-	width: 300px;
-    height: 250px;
-    border: 5px solid white;
-	border-radius: 2px;
-	background-color: none;
+#container { 
+height: 100px; 
+width: 100%;
 }
 
 
-h1{
-	width:100%; 
-	margin-top: 260px;
-	position: absolute;
-	font-size: 2vw;
-	color: white; 
-	text-align: center;
-	letter-spacing: 18px;
-	padding: 15px;
+#map {
+  height: 90vh;
+  width: 100%;
 }
 
-b{
-	font-size: 20px;
-	padding: 20px;
-}
-
-
-li {
-  display: block;
-  padding:20px;
-  float: right;
-  font-size: 20px;
-  color: white;
-  position: center;
-}
-
-li:hover { 
-text-decoration: underline;
-}
-
-#time{
-	width: 100%;
-	position: absolute;
-	font-size: 100px; 
-	color: white; 
-	text-align: center;
-	margin-top: 30px;
-	font-family:'OCR A', sans-serif;
-		
+.mapboxgl-popup {
+max-width: 400px;
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
