--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -2,14 +2,7 @@ body {
   background-image: url('../images/earth.jpg'); 
   background-attachment: fixed;
   background-position: center;
-  color: white;
 }
-
-#container { 
-height: 100px; 
-width: 100%;
-}
-
 
 #map {
   height: 90vh;
@@ -21,3 +14,34 @@ max-width: 400px;
 font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
+.desc {
+	color:white;
+}
+
+.temp {
+	color:white;
+}
+
+.input {
+	text-align: center;
+	margin: 50px;
+}
+	
+input[type="text"]{
+	height: 30px;
+	width; 600px; 
+	font-size: 15px; 
+	padding: 1px;
+}
+
+input[type="submit"]{
+	height: 36px;
+	width; 650px; 
+	font-size: 15px; 
+	padding: 1px;
+}
+
+.display {
+	text-align: center;
+	font: 25px/20px 'OCR A', Arial, Helvetica, sans-serif;
+}
